# shonion

./: .gitignore  Cargo.toml  README.md  install.sh  link.sh  listen.sh  shonion.sh
scripts/: build-all.sh  build.sh  commit-release.sh  get-host-triple.sh  get-shonion-executable.sh  install.sh  stage-release.sh
src/: main.rs
tests/: test-installer.sh
